tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-angle-type-arg-close.diagnostic
diagnostic error code=P0001 family=parser message="expected > after type arguments" sources=1 labels=2 notes=1 helps=1
  Source source_id=0 kind=file path="tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-angle-type-arg-close.ari" display="tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-angle-type-arg-close.ari" bytes=60
  Label index=0 role=primary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-angle-type-arg-close.ari" line=2 column=22 end_line=2 end_column=23 byte_start=40 byte_end=41 message=""
  Snippet label=0 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-angle-type-arg-close.ari:2:22\n   |\n 2 |   let value: Vec<i64 = [];\n   |                      ^"
  Label index=1 role=secondary source_id=0 source="tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-angle-type-arg-close.ari" line=2 column=17 end_line=2 end_column=18 byte_start=35 byte_end=36 message="type argument list starts here"
  Snippet label=1 text="  --> tests/cases/compiler-development/artifact/errors/diagnostic-parser-missing-angle-type-arg-close.ari:2:17\n   |\n 2 |   let value: Vec<i64 = [];\n   |                 ^"
  Note index=0 location=none message="delimited constructs must close before the surrounding statement or declaration continues"
  Help index=0 location=none message="add a matching > before continuing"
